# Implementation-of-optimatzion-functions

./: LICENSE  README.md
Nelder_Mead/: fminsearch.cpp  nelder_mead.cpp
fminsearch_Nelder_Mead/: fminsearch.cpp
logistic_regression/: derivativeTest.py  lineSearchWolfeStrong.py  logistic_regression.py  logistic_regression_GD.py  newton_hessian.py
logistic_regression_AND_newton_method/: a4.ipynb  derivativeTest.py  lineSearchWolfeStrong.py  loadData.py  newton_hessian.py  softMaxFun.py
nelder_mead/: .clang-format  CMakeLists.txt  nelder_mead.cpp  nelder_mead.h  test.cpp
nelder_mead_/: CMakeLists.txt
particle_swarm_optimization/: CMakeLists.txt  Jprand.cpp  Jprand.h  Trand.h  pso_parallel_cpu.cpp  pso_parallel_cpu.h  test.cpp
particle_swarm_optimization/basic_python/: pso.py
particle_swarm_optimization/c_plus_plus/: CMakeLists.txt  Jprand.cpp  Jprand.h  pso_parallel_cpu.cpp
particle_swarm_optimization/python_draft/: pso.py
